--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -4,10 +4,11 @@
         <span>({{post.post_url}})</span>
     </div>
     <div class="meta">
-        {{post.vote_count}} point(s) by {{post.user.username}} on {{post.created_at}}
+        {{post.vote_count}} {{format_plural 'point' post.vote_count}} by {{post.user.username}} on {{format_date post.created_at}}
         |
-        <a href="/post/{{post.id}}">{{post.comments.length}} comment(s)</a>
+        <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural 'comment' post.comments.length}}</a>
     </div>
+</article>
     {{#if loggedIn}}
     <form class="comment-form">
         <div>
@@ -19,19 +20,7 @@
         </div>
     </form>
     {{/if}}
-    <div class="comments">
-        {{#each post.comments}}
-        <section class="comment">
-            <div class="meta">
-                {{user.username}} on {{created_at}}
-            </div>
-            <div class="text">
-                {{comment_text}}
-            </div>
-        </section>
-        {{/each}}
-    </div>
-</article>
+{{> comments post.comments}}
 
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
